Package_Tools/include-C/ImageMagick-6/magick/in_arbeiit/fertig/annotate.h

/*
  Copyright 1999 ImageMagick Studio LLC, a non-profit organization
  dedicated to making software imaging solutions freely available.
  
  You may not use this file except in compliance with the License.  You may
  obtain a copy of the License at
  
    https://imagemagick.org/script/license.php
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.

  MagickCore image annotation methods.
*/
#ifndef MAGICKCORE_ANNOTATE_H
#define MAGICKCORE_ANNOTATE_H

#include "magick/draw.h"

extern  MagickBooleanType
  AnnotateComponentGenesis(void);
extern  MagickBooleanType
  AnnotateImage(Image *,const DrawInfo *);
extern  MagickBooleanType
  GetMultilineTypeMetrics(Image *,const DrawInfo *,TypeMetric *);
extern  MagickBooleanType
  GetTypeMetrics(Image *,const DrawInfo *,TypeMetric *);

extern  ssize_t
  FormatMagickCaption(Image *,DrawInfo *,const MagickBooleanType,TypeMetric *,
    char **);

extern  void
  AnnotateComponentTerminus(void);